production/operations/openfaas/openfaas/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-openfaas
  namespace: openfaas
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: zerossl

spec:
  tls:
  - hosts:
    - fn.buvis.net
    secretName: openfaas-crt
  rules:
  - host: fn.buvis.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: gateway
            port:
              number: 8080
